# wesl_hello

./: .gitignore  CMakeLists.txt  LICENSE  README.md  toolchain.cmake
scripts/: bakebits.sh  wesl_make.sh
src/: main.c
